# Yolo_object_detectio_c-

./: .gitignore  CMakeLists.txt  README.md
fd_tvm/models/darknet/fd_light/: fd_light.cfg
include/: config.h  foo.cpp  foo.hpp  nms.cpp  nms.hpp  utils.cpp  yolotvm.cpp  yolotvm.h
src/: main.cpp
yol_tvm/: auto_tune.py  tuner.py
